<resources>


    <string name="google_maps_key">AIzaSyDgZpnZcTGgtbSctnkjWnxpX_98CjtQwGU</string>
    <string name="app_name">Table Top Game Board</string>
    <string name="error_happened">Error happened</string>
    <string name="retry">Retry</string>
    <string name="no_data">No Data</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="title_activity_maps">Map</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="random_location">Random Location</string>

    <string name="poi">poi</string>
    <string name="location_required_error">Location services must be enabled to use the app</string>
    <string name="permission_denied_explanation">You need to grant location permission in order to select the location.</string>
    <string name="settings">Settings</string>
    <string name="select_poi">Please select a point of interest</string>
    <string name="geofence_entered">Geofence Entered</string>
    <string name="channel_name">GeofenceStatus</string>
    <string name="notification_channel_description">Geofence status notification</string>
    <string name="content_text">Table Top</string>
    <string name="select_title">Please select title</string>
    <string name="select_location">Please select location</string>
    <string name="geofences_not_added">Problem in adding geofences.</string>
    <string name="welcome">Welcome</string>
    <string name="err_enter_title">Please enter title</string>
    <string name="err_select_location">Please select location</string>
    <string name="text_location_label">Location: </string>

    <!-- Error strings -->
    <string name="geofence_unknown_error">Unknown error: the Geofence service is not available now.</string>
    <string name="geofence_not_available">Geofence service is not available now. Go to Settings>Location>Mode and choose High accuracy.</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences.</string>
    <string name="geofence_too_many_pending_intents">You have provided too many PendingIntents to the addGeofences() call.</string>
    <string name="error_adding_geofence">Error Happened, Can\'t Add Geofence</string>

    <string name="login_prompt">Login to set customizations!</string>
    <string name="login_btn">Login</string>

    <string name="warning_login_fail">Something went wrong please try again</string>

    <!--    Geofence Status Strings-->
    <string name="geofences_added">Clue Geofence added.</string>
    <string name="geofences_removed">Geofences removed.</string>
    <string name="geofence_over">You have found the treasure! Congratulations!</string>

    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>

    <string name="second_fragment">Invites</string>
    <string name="first_fragment">New</string>
    <string name="closed_fragment">Closed</string>
    <string name="show_the_game_status">show the game status</string>
    <string name="game_master_label">Master: %1$s</string>

    <string name="game_salved">Jogo salvo</string>





    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="login_label">Login</string>
    <string name="create_game_label">Create Game</string>
    <string name="game_title">Game Title</string>
    <string name="tuesday">Terça</string>
    <string name="sunday">Domingo</string>
    <string name="saturday">Sábado</string>
    <string name="friday">Sexta</string>
    <string name="thursday">Quinta</string>
    <string name="wednesday">Quarta</string>
    <string name="monday">Segunda</string>
    <string name="select_the_time">Select the Time</string>
</resources>
