<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.udacity.tabletop.view.mainScreen.createGame.CreateGameViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:layout_editor_absoluteX="-3dp"
        tools:layout_editor_absoluteY="79dp">

        <EditText
            android:id="@+id/create_game_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/game_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/rl_days_monday_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/rl_days_tuesday_area"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_game_title">

            <CheckBox
                android:id="@+id/cb_days_monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cb_days_monday"
                android:text="@string/monday" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_days_wednesday_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/rl_days_thursday_area"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/rl_days_tuesday_area"
            app:layout_constraintTop_toBottomOf="@+id/create_game_title">

            <CheckBox
                android:id="@+id/cb_days_wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cb_days_wednesday"
                android:text="@string/wednesday" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_days_thursday_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/rl_days_friday_area"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/rl_days_wednesday_area"
            app:layout_constraintTop_toBottomOf="@+id/create_game_title">

            <CheckBox
                android:id="@+id/cb_days_thursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cb_days_thursday"
                android:text="@string/thursday" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_days_friday_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/rl_days_saturday_area"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/rl_days_thursday_area"
            app:layout_constraintTop_toBottomOf="@+id/create_game_title">

            <CheckBox
                android:id="@+id/cb_days_friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cb_days_friday"
                android:text="@string/friday" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_days_saturday_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/rl_days_sunday_area"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/rl_days_friday_area"
            app:layout_constraintTop_toBottomOf="@+id/create_game_title">

            <CheckBox
                android:id="@+id/cb_days_saturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cb_days_saturday"
                android:text="@string/saturday" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_days_sunday_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/rl_days_saturday_area"
            app:layout_constraintTop_toBottomOf="@+id/create_game_title">

            <CheckBox
                android:id="@+id/cb_days_sunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cb_days_sunday"
                android:text="@string/sunday" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_days_tuesday_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/rl_days_wednesday_area"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/rl_days_monday_area"
            app:layout_constraintTop_toBottomOf="@+id/create_game_title">

            <CheckBox
                android:id="@+id/cb_days_tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cb_days_tuesday"
                android:text="@string/tuesday" />
        </RelativeLayout>

        <Button
            android:id="@+id/bt_show_timePiker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:onClick="showTimePickerDialog"
            android:text="@string/select_the_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rl_days_monday_area" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>